# robotframework-httpctrl

./: .travis.yml  CHANGES  LICENSE  PKG-INFO.rst  README.rst  client.html  index.html  json.html  logging.html  pyproject.toml  server.html  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-httpctrl.yml  release-documentation.yml  release-httpctrl.yml
HttpCtrl/: __init__.py  http_handler.py  http_server.py  logger.py  request.py  request_storage.py  response.py  response_storage.py
ci/: github-ci-docs.sh  github-ci-release.sh  github-ci.sh  travis-ci.sh
ci/cloud/: __init__.py  __main__.py
ci/cloud/cloud/: __init__.py  task.py  task_handler.py  yandex_disk.py
resources/: docs.css
src/HttpCtrl/: __init__.py  http_handler.py  http_server.py  http_stub.py  internal_messages.py  request.py  request_storage.py  response.py  response_storage.py
src/HttpCtrl/utils/: __init__.py  logger.py  singleton.py
tst/: client_basic.robot  client_get_ip.robot  client_methods.robot  json_basic.robot  server_basic.robot  server_methods.robot
